--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCarrito.cshtml
@@ -30,12 +30,9 @@
 else
 {
     <div class="container">
-        <div>
-            <a class="btn btn-default pull-left" onclick="verDetalle()">Ver Detalle</a>
-        </div>
         <div class="form-group">
-            <a class="btn btn-primary pull-right" onclick="quitarCarrito()">Quitar</a>
-            <a class="btn btn-danger pull-right" href="@Url.Action("Index","Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+            <a class="btn btn-primary pull-right" onclick="quitarCarrito()">Quitar  <span class="glyphicon glyphicon-trash"></span></a>
+            <a class="btn btn-danger pull-left" href="@Url.Action("Index","Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
         </div>
 
     </div><br />
@@ -48,8 +45,9 @@ else
                     <th>Fecha</th>
                     <th>Hora</th>
                     <th>Zona</th>
-                    <th>Precio(S/.)</th>
+                    <th>Subtotal(S/.)</th>
                     <th>Cantidad</th>
+                    <th>Asientos</th>
                     <th>Borrar</th>
                 </tr>
             </thead>
@@ -57,7 +55,8 @@ else
                 @for (int i = 0; i < carritoList.Count; i++)
                 {
                     total += carritoList[i].precio;
-                    <tr id="@(i)">
+                    string asientos = "";
+                    <tr id="@(i)" onclick="myFunction(this)">
                         <td>@carritoList[i].idEvento</td>
                         <td>@carritoList[i].nombreEvento</td>
                         <td>@String.Format("{0:dd/MM/yyyy}", carritoList[i].fecha)</td>
@@ -65,6 +64,16 @@ else
                         <td>@carritoList[i].zona</td>
                         <td>@carritoList[i].precio</td>
                         <td>@carritoList[i].cantidad</td>
+                        <td>
+                            @{
+                    for (int j = 0; j < carritoList[i].filas.Count - 1; j++)
+                    {
+                        asientos += carritoList[i].filas[j] + " - " + carritoList[i].columnas[j] + ", ";
+                    }
+                    asientos += carritoList[i].filas[carritoList[i].filas.Count - 1] + " - " + carritoList[i].columnas[carritoList[i].filas.Count - 1] + ".";
+                            }
+                            @asientos
+                        </td>
                         <td style="align-content:center"><input type="radio" name="groupCarrito" value="@(i)"></td>
                     </tr>
                 }
@@ -82,12 +91,39 @@ else
         <br>
         <br>
         <div class="col-md-12">
-            <a class="btn btn-success pull-right" href="@Url.Action("ComprarEntrada", "CuentaUsuario", new { carrito = carritoList })">Comprar>Comprar<span class="glyphicon glyphicon-usd"></span></a>
+            <a class="btn btn-success pull-right" href="@Url.Action("ComprarEntrada", "CuentaUsuario", new { carrito = carritoList})">Comprar<span class="glyphicon glyphicon-usd"></span></a>
         </div>
     </div>
 }
+@Html.Hidden("IdItemCarrito", "0")
 
+<div class="modal fade" id="muestraDetalle">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="form-group" id="detalleItemCarrito">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="cerrar()"><span class="glyphicon glyphicon-ok"></span> Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
+    function cerrar() {
+        $('#muestraDetalle').modal('hide');
+    }
+    function myFunction(x) {
+        if (document.getElementsByClassName("trselected").length > 0) {
+            var element = document.getElementsByClassName("trselected");
+            element[0].className = "";
+        }
+        var elem = document.getElementById("IdItemCarrito");
+        elem.value = x.id;
+        x.className = "trselected";
+    }
+
     function quitarCarrito() {
         if (confirm("¿Quitar Item?")) {
             var fila = $('input[name="groupCarrito"]:checked').val();
@@ -99,6 +135,7 @@ else
                 data: { itemEliminar: row.id },
                 success: function (data) {
                     window.location.href = '/CuentaUsuario/MiCarrito';
+                    alert("Compra removida del carrito.");
                 },
                 error: function (data) {
                     alert(data);
@@ -110,3 +147,8 @@ else
         }
     }
 </script>
+<style>
+    .trselected {
+        background: gray;
+    }
+</style>
