--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -47,7 +47,6 @@
     <div class="row">
         <div class="col-md-10 ">
             <div class="form-group">
-
                 @using (Html.BeginForm("Index", "Evento", FormMethod.Get, new { id = "search" }))
                 {
                     <div class="form-group">
@@ -79,37 +78,29 @@
                     <div class="form-group ">
                         <div class="form-group ">
                             <div class="input-group">
-
                                 <span class="input-group-addon">Desde:</span>
                                 @if (ViewBag.fech_ini != null)
                                 {
                                     string valor = ViewBag.fech_ini.ToString("yyyy-MM-dd");
-
                                     <input id="fech_ini" name="fech_ini" type="date" class="form-control" value=@valor>
                                 }
                                 else
                                 {
-
                                     <input id="fech_ini" name="fech_ini" type="date" class="form-control">
                                 }
-                              
-                              
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">Hasta:</span>
-
                                 @if (ViewBag.fech_fin != null)
                                 {
                                     string valor = ViewBag.fech_fin.ToString("yyyy-MM-dd");
-
-                                    <input id="fech_fin"  name="fech_fin" type="date" value=@valor class="form-control">
+                                    <input id="fech_fin" name="fech_fin" type="date" value=@valor class="form-control">
                                 }
                                 else
                                 {
-
-                                    <input id="fech_fin"  name="fech_fin" type="date" class="form-control">
+                                    <input id="fech_fin" name="fech_fin" type="date" class="form-control">
                                 }
                             </div>
                         </div>
@@ -125,32 +116,25 @@
                         <div class="form-group ">
                             <select name="idSubCat" id="idSubCat" data-val="true" class="form-control col-lg-2">
                                 <option value="">Subcategoria</option>
-                               @if (ViewBag.idCategoria != null) { 
-                               int idsubcat = ViewBag.idSubCat;
-                                int idPadre = ViewBag.idCategoria;
-
-                                var subcat = from obj in db.Categoria
-                                where obj.idCatPadre == idPadre
-                                select obj;
-
-                                foreach (var dato in subcat)
+                                @if (ViewBag.idCategoria != null)
                                 {
+                                    int idsubcat = ViewBag.idSubCat;
+                                    int idPadre = ViewBag.idCategoria;
 
-                                <option value=@dato.idCategoria>@dato.nombre</option>
+                                    var subcat = from obj in db.Categoria
+                                                 where obj.idCatPadre == idPadre
+                                                 select obj;
 
+                                    foreach (var dato in subcat)
+                                    {
+                                        <option value=@dato.idCategoria>@dato.nombre</option>
+                                    }
                                 }
-
-
-
-                                }
-
-
                             </select>
                         </div>
                         <div class="form-group">
                             <select name="idRegion" id="idRegion" data-val="true" class="form-control col-lg-2" onchange="cambio()">
                                 <option value="">Departamentos</option>
-
                                 @foreach (var departamento in ViewBag.departamentos)
                                 {
                                     <option value=@departamento.Value> @departamento.Text</option>
@@ -175,10 +159,10 @@
                     <tr class="thead">
                         <th>Id</th>
                         <th>
-                           Nombre
+                            Nombre
                         </th>
                         <th>
-                          Tipo
+                            Tipo
                         </th>
                         <th>
                             Categoria
@@ -198,58 +182,58 @@
                             <td>@evento.codigo</td>
                             <td>@evento.nombre</td>
                             @{
-                                Categoria cat = db.Categoria.Where(c => c.idCategoria == @evento.idCategoria).First();
+                        Categoria cat = db.Categoria.Where(c => c.idCategoria == @evento.idCategoria).First();
                             }
 
                             <td>@cat.nombre</td>
                             <td>@evento.idCategoria</td>
                             @{
 
-                                WebApplication4.Models.Organizador org = db.Organizador.Where(mod => mod.codOrg == @evento.idOrganizador).First();
+                        WebApplication4.Models.Organizador org = db.Organizador.Where(mod => mod.codOrg == @evento.idOrganizador).First();
                             }
                             <td>@org.nombOrg</td>
                             <td>@evento.estado</td>
                         </tr>
-                                }
+                    }
                 </tbody>
             </table>
 
-@{
+            @{
 
 
-        var fechaI = "";
-        var fechaF = "";
+                var fechaI = "";
+                var fechaF = "";
 
-        if (ViewBag.fech_ini != null)
-        {
-            fechaI = ViewBag.fech_ini.ToString("yyyy-MM-dd");
-
-
-        }
-        else
-        {
-            fechaI = ViewBag.fech_ini;
-
-        }
-
-        if (ViewBag.fech_fin != null)
-        {
-            fechaF = ViewBag.fech_fin.ToString("yyyy-MM-dd");
+                if (ViewBag.fech_ini != null)
+                {
+                    fechaI = ViewBag.fech_ini.ToString("yyyy-MM-dd");
 
 
-        }
-        else
-        {
-            fechaF = ViewBag.fech_fin;
+                }
+                else
+                {
+                    fechaI = ViewBag.fech_ini;
 
-        }
+                }
 
-    }
+                if (ViewBag.fech_fin != null)
+                {
+                    fechaF = ViewBag.fech_fin.ToString("yyyy-MM-dd");
 
-    Pagina @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount;
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, nombre = @ViewBag.nombre, fech_ini = fechaI, fech_fin = fechaF, idCategoria = @ViewBag.idCategoria, idSubCat = @ViewBag.idSubCat }));
 
-  
+                }
+                else
+                {
+                    fechaF = ViewBag.fech_fin;
+
+                }
+
+            }
+
+            Pagina @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount;
+            @Html.PagedListPager(Model, page => Url.Action("Index", new { page, nombre = @ViewBag.nombre, fech_ini = fechaI, fech_fin = fechaF, idCategoria = @ViewBag.idCategoria, idSubCat = @ViewBag.idSubCat }));
+
+
         </div>
     </div>
 </div>
@@ -362,8 +346,8 @@
                         .attr("name", "nombre").val(($("#nombre").val() != "") ? $("#nombre").val() : "");
         $("#adv-search").append(input);*/
 
-        
-       
+
+
         $("#adv-search").submit();
     }
 
@@ -386,7 +370,7 @@
             success: function (data) {
                 var obj = $.parseJSON(data);
                 $.each(obj, function (k, v) {
-          
+
                     ddProv.append($("<option></option>").val(v.IdRegion).html(v.Nombre));
                 });
             },
