--- a/WebApplication4/WebApplication4/Views/Local/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Edit.cshtml
@@ -12,7 +12,7 @@
     LocalEditModel localM = new LocalEditModel();
     int idR = 0;
     int idP = 0;
-    localM.aforo = (int)local.aforo;
+    //localM.aforo = (int)local.aforo;
     localM.idRegion = (int)local.idRegion;
     idR = (int)local.idRegion;
     localM.descripcion = local.descripcion;
@@ -29,13 +29,13 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         <br>
-        <div class="row form-group">
+        @*<div class="row form-group">
             @Html.LabelFor(model => model.aforo, new { @class = "control-label col-md-3" })
             <div class="col-md-5">
                 @Html.TextBoxFor(model => model.aforo, new { @class = "form-control", @placeholder = @localM.aforo, @Value = @localM.aforo })
                 @Html.ValidationMessageFor(model => model.aforo)
             </div>
-        </div>
+        </div>*@
 
         <div class="row form-group">
             @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-3" })
