--- a/WebApplication4/WebApplication4/Views/Local/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Index.cshtml
@@ -135,13 +135,13 @@
                 <div class="form-horizontal">
                     @Html.ValidationSummary(true)
                     <br>
-                    <div class="row form-group">
+                    @*<div class="row form-group">
                         @Html.LabelFor(model => model.aforo, new { @class = "control-label col-md-3" })
                         <div class="col-md-5">
                             @Html.EditorFor(model => model.aforo, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.aforo)
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="row form-group">
                         @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-3" })
