--- a/WebApplication4/WebApplication4/Views/Ventas/Devolucion.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Devolucion.cshtml
@@ -27,14 +27,14 @@
             </div>
             <div class="col-md-2">
                 <!--Por evaluar :)-->
-                <!--<a class="btn btn-primary" data-toggle="modal" onclick="redirigeDevolucion()">Ver Detalle<span class="glyphicon glyphicon-pencil"></span></a>-->
+                <a class="btn btn-primary" data-toggle="modal" onclick="redirigeDevolucion()">Ver Detalle<span class="glyphicon glyphicon-pencil"></span></a>
                 <!--<label>
                     <input type="checkbox"> Solo vencidos
                 </label>-->
             </div>
             <div class="col-md-3">
                 <!--<button type="button" onclick="devolver()" class="btn btn-primary">Devolver Dinero <span class="glyphicon glyphicon-usd"></span></button>-->
-                <a class="btn btn-primary" href="#devolver" data-toggle="modal">Devolver Dinero<span class="glyphicon glyphicon-usd"></span></a>
+                <!--<a class="btn btn-primary" href="#devolver" data-toggle="modal">Devolver Dinero<span class="glyphicon glyphicon-usd"></span></a>-->
                 <a class="btn btn-danger" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
             </div>
         </div>
