--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -139,7 +139,8 @@
             <h3>Ubicación</h3><br>
 
             <div class="row form-group">
-                @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
                 <div class="col-md-7">
                     @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.direccion)
