Detalle Devolucion aun sin probar, a ciegas

--- a/WebApplication4/WebApplication4/Views/Ventas/Devolucion.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Devolucion.cshtml
@@ -52,12 +52,13 @@
                     <th>Cod. Devol.</th>
                     <th>Nº Doc</th>
                     <th>Nombre</th>
-                    <th>Fecha</th>
-                    <th>Hora</th>
+                    <th>Fecha Fun</th>
+                    <th>Hora Ini Fun</th>
                     <th>Evento</th>
+                    <th>Zona</th>
                     <th>Cant boletos</th>
                     <th>Monto (S/.)</th>
-                    <th>Estado</th>
+                    <th>Estado Even</th>
                 </tr>
             </thead>
             <tbody id="tbody">
@@ -72,6 +73,7 @@
                                 <td>@row.fecha</td>
                                 <td>@row.hora</td>
                                 <td>@row.evento</td>
+                                <td>@row.zona</td>
                                 <td>@row.cantAsientos</td>
                                 <td>@row.monto</td>
                                 <td>@row.estado</td>
