--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -21,6 +21,7 @@
     <div class="container">
         <div class="col-md-8">
             @Html.ValidationSummary(true)
+            <h7 style="color:red">* Datos obligatorios</h7>
             <h3>Datos de Ingreso</h3><br>
             <div class="row form-group">
                 @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
